# cms_backend

./: .dockerignore  .env  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  S4C_Ninja_Inkflow_Presentation.pptx  TextExtraction.jsx  cms.db  debug_file_53.py  diff_names.txt  docker-compose.yml  entrypoint.sh  init-letsencrypt.sh  linux_https_deployment_plan.md  pph_cookies.txt  ref_cache.json  requirements.txt  reset_admin.py  reset_admin_custom.py  run-docker.ps1  run-docker.sh  s4c_ninja_inkflow_presentation.html  seed.py  temp_replace.py  test_endpoint.py  verify_import.py
ai_structuring_backend/: .env.example
alembic/: env.py
app/: auth.py  main.py  rbac.py  schemas.py  schemas_v2.py  worker.py
app/processing/manuscript_core/: analyzer.py  exporters.py  extractor.py  figure_table_highlighter.py  fixer.py  ia_mapping.py  ia_report_builder.py  models.py  pyproject.toml  tasks.py
app/processing/manuscript_core/data/: templates.json  uk_us_pairs.py
app/processing/manuscript_core/rules/: base.py  bias_and_articles.py  compounds.py  spelling.py  te_point_replacements.py  te_points.py
app/processing/manuscript_core/templates/: templates.json
data/: inspect_xhtml.py
docs/: API_CALLS_GUIDE.md  Agents.md  CODEBASE_UNDERSTANDING.md  COLOR_REPLACEMENTS.md  REPOSITORY_ARCHITECTURE_AND_REFACTOR_PLAN.md  SITE_FLOW.md  SYSTEM_REQUIREMENTS.md  WINDOWS_SETUP.md  aws_deployment_plan.md  backend_flow_diagrams.md  developer_guide.md  plan-addOpenInWordWebdavIntegration.prompt.prompt.md  qa_test_coverage_report.md  release_candidate_checklist.md  (+1 more)
(+716 files in other folders)
